<resources>
    <string name="app_name">PingMeat</string>
    <string name="facebook_app_id">2283511955008290</string>
    <string name="fb_login_protocol_scheme">fb2283511955008290</string>
    <string name="title_activity_login">Ping Meat</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="client_id_google">AIzaSyBodw0B4v_EzES_S_CJ2EdqgfpkVn1URUw</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="button_login_with_google">Se connecter avec google</string>

    <string name="title_activity_maps">Localisation</string>
    <string name="title_activity_home">Home</string>

    <string name="posts_label">Posts:</string>
    <string name="button_map">Afficher les food trunks</string>
    <string name="button_user_settings">Go to User Settings</string>
    <string name="button_home">Home</string>
    <string name="button_signin">Se connecter</string>
    <string name="button_signup">S\'enregistrer</string>

    <!-- Strings related to home -->
    <string name="pingmeat">Ping Meat</string>
    <string name="name_food_truck">Nom :</string>
    <string name="owner_food_truck">Propriétaire :</string>
    <string name="price_food_truck">Prix :</string>
    <string name="selected_food_truck">Informations Food Truck</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Go to admin</string>
    <string name="title_activity_home_gerant">HomeGerantActivity</string>

    <string name="hello_blank_fragment">Home</string>
    <string name="Ping_meat_search">Appuyez sur le bouton ci-dessous pour rechercher les foodtrucks à proximité !</string>


</resources>
